# chmi

./: Cargo.toml  README.md
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  windows.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: main.rs
src/: cache.rs  cap.rs  fmt.rs  lib.rs  logger.rs  main.rs  monitor.rs  parse.rs  token.rs  windows.rs
src/snapshots/: chmi__parse__tests__parse_u32j59x_capabilities.snap  chmi__parse__tests__parse_un880_capabilities.snap  chmi__parse__tests__parse_vg259_capabilities.snap
tests/: it.rs
tests/snapshots/: it__parse_u32j59x_capabilities.snap  it__parse_un880_capabilities.snap  it__parse_vg259_capabilities.snap
